[Stage 3] Report draft