@@ -7,6 +7,7 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -21,17 +22,19 @@ public final class ServerImpl {
 
     public static void main(String[] args) {
         try {
-            int port = 19234;
+            int port = Integer.parseInt(args[0]);
+
             String url = "http://localhost:" + port;
             ServiceConfig cfg = new ServiceConfig(
                     port,
                     url,
-                    Collections.singletonList(url),
-                    Files.createTempDirectory("server2")
+                    List.of("http://localhost:19234", "http://localhost:19235", "http://localhost:19236"),
+                    Files.createTempDirectory("server" + port)
             );
             new ServiceImpl(cfg).start().get(1, TimeUnit.SECONDS);
             LOG.info("Socket is ready: " + url);
             LOG.info("Volumes mounted on " + cfg.workingDir());
+            System.out.println("Volumes mounted on " + cfg.workingDir());
         } catch (IOException | InterruptedException | ExecutionException | TimeoutException e) {
             LOG.error("Unable to start server: " + e.getMessage());
         }
